# ClickHouse

base/common/: StringRef.h
cmake/find/: poco.cmake
src/: CMakeLists.txt
src/Processors/Merges/Algorithms/: Graphite.cpp  Graphite.h  GraphiteRollupSortedAlgorithm.cpp  GraphiteRollupSortedAlgorithm.h
src/Processors/Merges/Algorithms/tests/: gtest_graphite.cpp  rollup-typed.txt  rollup-typed.xml  rollup.txt  rollup.xml
src/Storages/MergeTree/: registerStorageMergeTree.cpp
src/Storages/System/: StorageSystemGraphite.cpp
tests/integration/test_graphite_merge_tree/: test.py
utils/: CMakeLists.txt
utils/graphite-bench/: CMakeLists.txt  graphite-rollup-bench.cpp  metrics.txt  rollup-typed-map.xml  rollup-typed.xml  rollup.xml
utils/graphite-rollup/: CMakeLists.txt  graphite-rollup-bench.cpp  rollup-tagged.xml  rollup-typed.xml  rollup.xml
